--- a/01_DOM/03_node-property/01_get-node-info.html
+++ b/01_DOM/03_node-property/01_get-node-info.html
@@ -31,7 +31,7 @@
   <div id="area">
     노드 정보 취득
   </div>
-
+    <!--긴 소스코드 중 태그 속성을 찾는 방법-->
   <script>
     console.log(document.nodeType);
     console.log(document.nodeName);
