--- a/01_DOM/02_node-traversing/03_sibling-node.html
+++ b/01_DOM/02_node-traversing/03_sibling-node.html
@@ -21,11 +21,12 @@
     const $node = document.getElementById("node");
     /*     구조 분해 할당      -   구조의 일부를 가지고 나옴    */
     const {firstChild} = $node;
-    /*        첫번째 자식요소가 text인 이유는 ol 에서 li 로 넘어갈 때 엔터가 텍스트로 들어가기 떄문에          */
+    /*        첫번째 자식노드가 text인 이유는 ol 에서 li 로 넘어갈 때 엔터가 텍스트로 들어가기 떄문에          */
     console.log(firstChild);
     
-    const {firstElementChild} = $node;
+    const {firstElementChild} = $node; /*첫번째 요소 출력 -- 여기선 li*/
     console.log(firstElementChild);
+
 
     const {nextSibling} = firstChild;
     console.log(nextSibling);
