--- a/01_DOM/03_node-property/02_text-node-content.html
+++ b/01_DOM/03_node-property/02_text-node-content.html
@@ -26,7 +26,7 @@
     /*              document - 문서 노드 = value시 null 반환           */
     const $area = document.getElementById("area");
     console.log($area.nodeValue);
-    /*             area 아이디의 모든 엘리멘트의 문서 노드 = value시 null 반환         */
+    /*             area 아이디의 모든 엘리멘트의 요소 노드 = value시 null 반환         */
     const $textNode = $area.firstChild;
     /*                    area의 첫번째 자식 - 텍스트밸류(node value)            */
     console.log($textNode.nodeValue);
