--- a/01_DOM/01_get_element-node/01_use-id.html
+++ b/01_DOM/01_get_element-node/01_use-id.html
@@ -38,7 +38,7 @@
     area2.style.backgroundColor='blue';
 
     let $noElem;
-    consolelog($noElem)
+    console.log($noElem)
     $noElem = document.getElementById("area3");
     console.log($noElem)
 
